# programbench-task-generator

./: .gitignore  README.md  pyproject.toml
artifacts/impressive_demo_roi/: behavior_surface.yaml  build_artifact.json
artifacts/mini_cli/: behavior_surface.yaml  build_artifact.json  task_spec.yaml
artifacts/mini_cli_cov/: behavior_surface.yaml  build_artifact.json  task_spec.yaml
artifacts/mini_cli_run/: behavior_surface.yaml  build_artifact.json  task_spec.yaml
artifacts/mini_cli_twostep/: behavior_surface.yaml  build_artifact.json
docker/pbgen-eval/: Dockerfile
docs/: adapter_development.md  docker_no_network_evaluation.md  model_backed_generation.md
examples/demo_task/: README.md
examples/profiles/: c_make_cli.pbgen_task.yaml  python_package_cli.pbgen_task.yaml
pbgen/: __init__.py  candidate_evaluator.py  cli.py  config.py  errors.py  pipeline.py  released_package.py  schemas.py  serialization.py  submission_export.py  subprocess_utils.py  task_constructor.py  task_profile.py
pbgen/cleanroom/: __init__.py  asset_selector.py  docs_filter.py  leak_checker.py  task_packager.py
pbgen/coverage/: __init__.py  adapters.py  coverage_runner.py  gap_analyzer.py  registry.py
pbgen/efficiency/: __init__.py  efficiency_score.py  runtime_runner.py
pbgen/eval/: __init__.py  executable_runner.py  result_schema.py  (+2 more)
programbench_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/: build_executable.md  discover_behavioral_surface.md  generate_tests_for_gap.md  repair_weak_tests.md  strip_docs.md
scripts/: build_eval_image.sh
(+167 files in other folders)
